<resources>
    <string name="app_name">LightEnhancer</string>
    <string name="settings_button">SettingsButton</string>
    <string name="slider">slider</string>
    <string name="enhancedview">enhancedView</string>
    <string name="capture_button">CaptureButton</string>
    <string name="title_activity_edit_image">EditImageActivity</string>
    <string name="edit_button">EditButton</string>
    <string name="settings">Settings</string>
    <string name="enhance_switch">Enhance Light</string>
    <string name="torch_switch">Torch</string>
    <string name="model_resolution">Model resolution:</string>
    <string name="close">Close</string>
    <string name="select_image">Select Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="save_image">Save Image</string>
</resources>